--- a/build.gradle
+++ b/build.gradle
@@ -1,50 +1,44 @@
 plugins {
-    id 'org.springframework.boot' version '3.0.4'
-    id 'io.spring.dependency-management' version '1.1.0'
     id 'java'
-    id 'co.uzzu.dotenv.gradle' version '2.0.0'
-    id 'org.hibernate.orm' version "6.2.1.Final"
+    id 'org.springframework.boot' version '3.0.5'
+    id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.hibernate.orm' version '6.1.7.Final'
+    id 'org.graalvm.buildtools.native' version '0.9.20'
 }
+
 
 group 'org.armzbot'
 version '1.0-SNAPSHOT'
+sourceCompatibility = '17'
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation "org.springframework.boot:spring-boot-starter-data-redis"
-    implementation "org.springframework.boot:spring-boot-starter-cache"
-    implementation "org.passay:passay:1.6.0"
-    implementation "org.springframework.boot:spring-boot-starter-actuator"
-    implementation "org.springframework.boot:spring-boot-starter-mail"
-    implementation "org.springframework.boot:spring-boot-devtools"
-    implementation "org.springframework.boot:spring-boot-configuration-processor"
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.projectlombok:lombok:1.18.26'
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc:3.0.4'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    compileOnly 'org.projectlombok:lombok'
     implementation 'org.mapstruct:mapstruct:1.3.0.Final'
-    implementation 'org.postgresql:postgresql:42.2.27'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+    implementation 'com.google.firebase:firebase-admin:9.1.1'
     implementation 'org.springframework.security:spring-security-crypto:6.0.2'
     implementation 'org.springframework.security:spring-security-core:6.0.2'
-    implementation 'com.google.firebase:firebase-admin:9.1.1'
-    implementation 'org.jetbrains:annotations:24.0.1'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    runtimeOnly 'org.postgresql:postgresql'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 
 }
 
 test {
     useJUnitPlatform()
 }
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-}
+
