--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,17 @@
 version: "3.9"
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: app
-    restart: always
-    volumes:
-      - .:/app
-    ports:
-      - "8081:8081"
-    depends_on:
-      - postgres
+#  app:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    container_name: app
+#    restart: always
+#    volumes:
+#      - .:/app
+#    ports:
+#      - "8081:8081"
+#    depends_on:
+#      - postgres
   postgres:
     image: postgres:latest
     container_name: postgres
