--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,28 @@ server.port=${SERVER_PORT:8081}
 # ===============================
 # DATASOURCE
 # ===============================
-spring.datasource.url=jdbc:postgresql://postgres.standupcode.tech:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=123456789
+spring.datasource.url=jdbc:postgresql://tiny.db.elephantsql.com:5432/dsvonrfm
+spring.datasource.username=dsvonrfm
+spring.datasource.password=eZqneX-hcKr8nqEfDoXjKRSshJYJbFK5
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.open-in-view = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+
+
+spring.data.redis.database=0
+spring.data.redis.host=redis-13831.c54.ap-northeast-1-2.ec2.cloud.redislabs.com
+spring.data.redis.password=yNpWAatRih1vm1FyRK3DfM7ELpII9K9Y
+spring.data.redis.port=13831
+
+spring.cache.type=redis
+spring.cache.redis.time-to-live=120000
 # ===============================
 # APP Environment Variables
 # ===============================
