--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
     id 'org.hibernate.orm' version '6.1.7.Final'
     id 'org.graalvm.buildtools.native' version '0.9.20'
+    id 'com.palantir.docker' version '0.22.1'
 }
 
 
@@ -19,6 +20,13 @@ configurations {
 
 repositories {
     mavenCentral()
+}
+
+docker {
+    name "airbnb-backend"
+    dockerfile file('src/Dockerfile')
+    copySpec.from(jar).rename(".*","app.jar")
+    buildArgs(['JAR_FILE': "app.jar"])
 }
 
 dependencies {
