--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=Airbnb
 server.port=${SERVER_PORT:8081}
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=on_param
+server.error.include-exception=false
+spring.mvc.throw-exception-if-no-handler-found=true
 # ===============================
 # DATASOURCE
 # ===============================
