--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,20 @@ spring.application.name=Airbnb
 server.port=${SERVER_PORT:8081}
 server.error.include-message=always
 server.error.include-binding-errors=always
-server.error.include-stacktrace=on_param
 server.error.include-exception=false
 spring.mvc.throw-exception-if-no-handler-found=true
 # ===============================
 # DATASOURCE
 # ===============================
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=123456789
+spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ===============================
+env.app_services_account_key=${APP_SERVICES_ACCOUNT_KEY}
