--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,59 @@
-name: 'Spring Gradle Build Action'
-description: 'Reusable GitHub Action for performing a gradle build or running a gradle task.'
-author: 'Spring'
+name: Deploy Backend to Cloud Run
+on:
+  push:
+    branches:
+      - main
 
-inputs:
-  java-version:
-    description: 'Version of the JDK to use to run the Gradle command. Used in the actions/setup-java step.'
-    required: false
-    default: '17'
-  distribution:
-    description: 'Distribution of the JDK to use to run the Gradle command. Used in the actions/setup-java step.'
-    required: false
-    default: 'temurin'
+env:
+  REGION: "asia-southeast1"
+  SERVICE: "airbnbbackend"
+  GOOGLE_CLOUD_PROJECT: "${{ secrets.GCP_PROJECT_ID }}"
+  GOOGLE_CLOUD_KEYFILE: "${{ secrets.GCP_CREDENTIALS }}"
+  SPRING_DATASOURCE_URL: "${{secrets.DATABASE_URL}}"
+  SPRING_DATASOURCE_USERNAME: "${{DATABASE_USERNAME}}"
+  SPRING_DATASOURCE_PASSWORD: "${{DATABASE_PASSWORD}}"
+  SPRING_JPA_HIBERNATE_DDL_AUTO: update
+  SPRING_JPA_SHOW_SQL: true
+  SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL: true
+  APP_SERVICES_ACCOUNT_KEY: "${{APP_SERVICES_ACCOUNT_KEY}}"
 
-runs:
-  using: 'composite'
-  steps:
-    - name: Set up JDK ${{ inputs.java-version }}
-      uses: actions/setup-java@v3
-      with:
-        java-version: ${{ inputs.java-version }}
-        distribution: ${{ inputs.distribution }}
-    - name: Set up gradle user name
-      shell: bash
-      run: |
-        mkdir -p /home/runner/.gradle
-        echo 'systemProp.user.name=spring-builds+github' >> /home/runner/.gradle/gradle.properties
-    - name: Gradle Wrapper Validation
-      uses: gradle/wrapper-validation-action@v1
-    - name: Set up Gradle
-      uses: gradle/gradle-build-action@v2
-      env:
-        GRADLE_USER_HOME: /home/runner/.gradle
+jobs:
+  gradle:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 11
+
+      - name: Setup gcloud
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
+      - name: Execute Gradle build
+        run: ./gradlew build
+
+      - name: Build Image with Cloud Build
+        uses: google-github-actions/cloudbuild@main
+        with:
+          name: 'gcr.io/$PROJECT_ID/$REPO_NAME'
+
+      - name: Run on Cloud Run 
+        uses: google-github-actions/deploy-cloudrun@main
+        with:
+          service: 'gcr.io/$PROJECT_ID/$REPO_NAME'
+          region: 'asia-southeast1'
+          platform: 'managed'
+          revision_suffix: 'latest'
+          allow_unauthenticated: true
+          
