--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,13 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
     id 'org.hibernate.orm' version '6.1.7.Final'
     id 'org.graalvm.buildtools.native' version '0.9.20'
-    id 'com.palantir.docker' version '0.22.1'
+    id 'com.palantir.docker' version '0.35.0'
+
 }
 
 
 group 'org.armzbot'
-version '1.0-SNAPSHOT'
+version '1.0'
 sourceCompatibility = '17'
 
 configurations {
@@ -18,16 +19,26 @@ configurations {
     }
 }
 
+
 repositories {
     mavenCentral()
 }
 
-docker {
-    name "airbnb-backend"
-    dockerfile file('src/Dockerfile')
-    copySpec.from(jar).rename(".*","app.jar")
-    buildArgs(['JAR_FILE': "app.jar"])
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.armzbot.AirbnbBackend.Main'
+    }
 }
+
+docker {
+    name "gcr.io/standupcodeservices/airbnb-clone:latest"
+    dockerfile file('Dockerfile')
+    copySpec.from(jar).rename(".*", "app.jar")
+    buildArgs(['JAR_FILE': "app.jar"])
+    files 'app.jar'
+    noCache(true)
+}
+
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -49,6 +60,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
+
 
 test {
     useJUnitPlatform()
