--- a/example.env
+++ b/example.env
@@ -1,3 +1,6 @@
-DATABASE_HOST=""
-DATABASE_USERNAME=""
-DATABASE_PASSWORD=""
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_NAME=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+APP_SERVICES_ACCOUNT_KEY=
